# matfHub

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  README.md  Untitled Diagram.drawio  conanfile.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  prebuild.sh
MatfHub/: CMakeLists.txt  main.cpp
build-MatfHub-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  MatfHub  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-MatfHub-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-819c1cc4acbdcac87bbe.json  cmakeFiles-v1-cfa1ed0592755c59ffd2.json  codemodel-v2-d6dd749a7ac20e337c56.json  directory-.-Debug-a33fc1f1bd1c80e372a4.json  index-2023-11-11T22-47-48-0314.json  target-MatfHub-Debug-f852b19500725676f12b.json  target-MatfHub_autogen-Debug-3d416e8497496c325782.json  target-MatfHub_autogen_timestamp_deps-Debug-f03f0b11d03d72384b6f.json
build-MatfHub-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-MatfHub-Desktop-Debug/MatfHub_autogen/: deps
build-MatfHub-Desktop-Debug/MatfHub_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-MatfHub-Desktop_Qt_6_6_0_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-MatfHub-Desktop_Qt_6_6_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-79e068f46c0ffb1e9eb4.json  cmakeFiles-v1-31dfa55fc8ea61cfa7e8.json  codemodel-v2-99209b2bcef402e9ff72.json  index-2023-11-11T22-54-31-0372.json  target-MatfHub-Debug-951502fcaaf2080a4e23.json  target-MatfHub_autogen-Debug-e8f123882907d0e83c91.json  target-MatfHub_autogen_timestamp_deps-Debug-6e96f8616a3be7f06220.json
build-MatfHub-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
calculator/: .gitignore  .test.cpp.kate-swp  A_mat.txt  B_mat.txt  mul.cpp  prog  test  test.cpp
calculator/UI/: keyPressed.cpp  keyPressed.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
calculator/matrica/: a.out  main.cpp  matrica.cpp  matrica.hpp
calculator/matrix/: main.cpp  matrix.cpp
calculator/parser/: main.cpp  parser.cpp  parser.hpp
calculator/src/matrix/: main.cpp  matrix.cpp  matrix.hpp
calculator/untitled/: mainwindow.cpp  mainwindow.h  mainwindow.ui
doc/src/: mainwindow.cpp  mainwindow.hpp
matfHub/: .clang-format  mainwindow.ui  map.txt  resources.qrc
matfHub/calculator/: .gitignore  mul.cpp  test.cpp
matfHub/calculator/UI/: keyPressed.cpp  keyPressed.h  mainwindow.cpp  mainwindow.h  untitled.pro
matfHub/calculator/matrica/: matrix.cpp  matrix.hpp
matfHub/calculator/parser/: parser.cpp  parser.hpp
matfHub/calculator/src/matrix/: arma.cpp  main.cpp  proba.cpp
matfHub/calculator/src/plotter/: CMakeLists.txt  main.cpp  plotter.cpp  run.sh
matfHub/calculator/src/plotter/src/: plotter.hpp
matfHub/documentation/: David Usecase.vpd  MATFHub docu.docx  classDiagram.vpd  dijagramSekvenciFManagerNavigacija.vpd  useCaseDiagram.vpd  use_cases.txt
matfHub/include/: calculator.h  calendar.h  config.hpp  course.h  exceptions.h  filemanager.hpp  helpers.h  history.hpp  kmiljanscraper.h  mainwindow.hpp  matrix.hpp  notes.h  parser.hpp  parserEnum.hpp  plotter.hpp  requesthandler.h  schedule.h  schedulegenerator.h  statistics.hpp  views.h
matfHub/src/: .clang-tidy  calculator.cpp  calendar.cpp  config.cpp  course.cpp  filemanager.cpp  history.cpp  kmiljanscraper.cpp  log.txt  main.cpp  mainwindow.cpp  matrix.cpp  notes.cpp  parser.cpp  plotter.cpp  requesthandler.cpp  schedule.cpp  schedulegenerator.cpp  statistics.cpp  views.cpp
matfHub/test/: CMakeCache.txt  CMakeLists.txt  fmanager.test.cpp  log.txt  matrix.test.cpp  parser.test.cpp  run.sh  run_stat_test.sh  run_test.sh  statistics.test.cpp
matfHub/test/fm/: fmanager.test.cpp
matfHub/test/fm/script/: run_fmanager_test.sh
matfHub/test/scripts/: CMakeLists.txt  matrix.test.cpp  plotter.test.cpp  run_matrix_test.sh  run_parser_test.sh  run_plotter_test.sh  run_stat_test.sh
matfHub/test/scriptsForGitHook/: CMakeLists.txt  run_matrix_test.sh  run_parser_test.sh  run_plotter_test.sh  run_stat_test.sh
specification/: MATFHub docu.docx  matfHub.docx  matfHub.odt
specification/res/: Class Diagram.vpd  Copy of Klas.drawio  MATFHub docu (1).docx  Plot Sequence Diagram.vpd  Use Case Diagram.drawio  Use Case Diagram.vpd  Use Cases.txt  Use case dijagram.drawio  sequenceNotes.vpp
